ansible/deployments/webtest/service.yml
kind: Service
apiVersion: v1
metadata:
  name: webling
  namespace: default
spec:
  selector:
    app: webl0r
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
