ansible/deployments/webtest/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webtest
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: webl0r
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webling
          servicePort: 80
